syntax = "proto3";

option go_package = "github.com/breez/data-sync/proto";
package sync;

service Syncer {
  rpc SetRecord(SetRecordRequest) returns (SetRecordReply) {}
  rpc ListChanges(ListChangesRequest) returns (ListChangesReply) {}
  rpc ListenChanges(ListenChangesRequest) returns (stream Notification);
  rpc SetLock(SetLockRequest) returns (SetLockReply) {}
  rpc GetLock(GetLockRequest) returns (GetLockReply) {}
}

message Record {
  string id = 1;
  uint64 revision = 2;
  string schema_version = 3;
  bytes data = 4;
}

message SetRecordRequest {
  Record record = 1;
  uint32 request_time = 2;
  string signature = 3;
  optional string client_id = 4;
}
enum SetRecordStatus {
  SUCCESS = 0;
  CONFLICT = 1;
}
message SetRecordReply {
  SetRecordStatus status = 1;
  uint64 new_revision = 2;
}

message ListChangesRequest {
  uint64 since_revision = 1;
  uint32 request_time = 2;
  string signature = 3;
}
message ListChangesReply { repeated Record changes = 1; }

message ListenChangesRequest {
  uint32 request_time = 1;
  string signature = 2;
}

message Notification { optional string client_id = 1; }

message SetLockRequest {
  string lock_name = 1;
  string instance_id = 2;
  bool acquire = 3;
  bool exclusive = 4;
  optional uint32 ttl_seconds = 5;
  uint32 request_time = 6;
  string signature = 7;
}
message SetLockReply {}

message GetLockRequest {
  string lock_name = 1;
  uint32 request_time = 2;
  string signature = 3;
}
message GetLockReply {
  bool locked = 1;
}
